Calling to logistics API and insert it into Shipping DB collection
