# server.js
@@ -15,6 +15,7 @@ app.use(cors({ origin: (origin, callback) => callback(null, true), credentials: 
 
 // api routes
 app.use('/accounts', require('./accounts/accounts.controller'));
+app.use('/shippings', require('./shippings/shippings.controller'));
 
 // swagger docs route
 app.use('/api-docs', require('_helpers/swagger'));
