# shippings/shippings.controller.js
@@ -1,0 +1,71 @@
+﻿const express = require('express');
+const router = express.Router();
+const Joi = require('joi');
+const validateRequest = require('_middleware/validate-request');
+const authorize = require('_middleware/authorize')
+const Role = require('_helpers/role');
+const shippingService = require('./shipping.service');
+
+// routes
+router.get('/', authorize(Role.Admin), getAll);
+router.post('/', authorize(Role.Admin), createSchema, create);
+router.put('/:id', authorize(), updateSchema, update);
+router.delete('/:id', authorize(), _delete);
+
+module.exports = router;
+
+function getAll(req, res, next) {
+    shippingService.create()
+        .then(shippings => res.json(shippings))
+        .catch(next);
+}
+
+function createSchema(req, res, next) {
+    const schema = Joi.object({
+        title: Joi.string().required(),
+        firstName: Joi.string().required(),
+        lastName: Joi.string().required(),
+        email: Joi.string().email().required(),
+        password: Joi.string().min(6).required(),
+        confirmPassword: Joi.string().valid(Joi.ref('password')).required(),
+        role: Joi.string().valid(Role.Admin, Role.User).required()
+    });
+    validateRequest(req, next, schema);
+}
+
+function create(req, res, next) {
+    shippingService.create(req.body)
+        .then(shipping => res.json(shipping))
+        .catch(next);
+}
+
+function updateSchema(req, res, next) {
+    const schemaRules = {
+        title: Joi.string().empty(''),
+        firstName: Joi.string().empty(''),
+        lastName: Joi.string().empty(''),
+        email: Joi.string().email().empty(''),
+        password: Joi.string().min(6).empty(''),
+        confirmPassword: Joi.string().valid(Joi.ref('password')).empty('')
+    };
+
+    // only admins can update role
+    if (req.user.role === Role.Admin) {
+        schemaRules.role = Joi.string().valid(Role.Admin, Role.User).empty('');
+    }
+
+    const schema = Joi.object(schemaRules).with('password', 'confirmPassword');
+    validateRequest(req, next, schema);
+}
+
+function update(req, res, next) {
+    shippingService.update(req.params.id, req.body)
+        .then(shipping => res.json(shipping))
+        .catch(next);
+}
+
+function _delete(req, res, next) {
+    shippingService.delete(req.params.id)
+        .then(() => res.json({ message: 'Shipping deleted successfully' }))
+        .catch(next);
+}
